# NovelTranslationArchive

./: .gitignore  README.md  main.py  pyproject.toml  releases.py
.github/workflows/: auto-release.yml
Original Novels/Hexe Complex/: Epilogue.md  Order：１０.md  Order：１１.md  Order：１２.md  Order：１３.md  Order：１４.md  Order：１５.md  Order：１６.md  Order：１７.md  Order：１８.md  Order：１９.md  Order：２１.md  Order：２５.md  Order：２７.md  Order：２９.md  Order：３.md  Order：３２.md  Order：３６.md  Order：３８.md  Order：４.md  Order：４５.md  Order：４７.md  Order：５.md  Order：５１.md  Order：５２.md  Order：５４.md  Order：６.md  Order：６０.md  Order：６１.md  Order：６２.md  Order：６３.md  Order：６４.md  Order：６５.md  Order：６６.md  Order：６９.md  Order：７.md  Order：７４.md  Order：７５.md  Order：７７.md  Order：７９.md  (+6 more)
Original Novels/俺は最新でお前はかつての俺なわけで　～心春な日々～/: 01-俺最新になるわけで.md  02-心春は可愛いわけで.md  03-トラ改造計画を立ち上げたわけで.md  04-初めてのお使いに行くわけで.md  05-トラが初登校するわけで.md  06-出席簿.md  07-クラスメイトにはお嬢様がいるわけで.md  08-家の隣には幼馴染みがいるわけで.md  09-なんか幼馴染みがデレをみせ始めたわけで.md  10-お嬢様のお家にお招きされるわけで.md  100-心春は心春で、トラはトラなわけで.md  101-梅咲トラ雄の告白.md  102-お姉さんの気持ちと親友の葛藤とお誘いなわけで.md  103-母と姉は優しく見守り成長を願うわけで.md  104-ネコの髪留めは嬉しくて新たな予感を感じさせるわけで.md  105-ネコの髪留めを付けてくれる人も同じで、尚尚嬉しいわけなのです.md  106-夏休み最後はご挨拶からなわけで.md  107-母と娘なわけで.md  108-新学期が始まるとクラスメイトは別人になってたわで.md  109-付き合いたてのカップルはうざく感じるわけで.md  11-お母さんとお買い物行くわけで.md  110-アンドロイドも病院は嫌いなわけで.md  111-うめしゃき？ひしゃの？なわけで.md  112-夢見ることなわけで.md  115-男子会.md  (+141 more)
data/: name_bind.csv
novel_translator/: config.py  name_binding.py  translator.py
utils/: __init__.py  converter.py  converter_models.py  execeptions.py  novel_packer.py  translate.py  translation_analyzer.py
(+698 files in other folders)
